# Enterprise_bot

./: .env.azure-template  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  HANDOFF_SUMMARY.md  MASTER_EXECUTION_PLAN.md  MEMORY_BACKEND_INTEGRATION.md  MIGRATION_001_COMPLETE.md  MIGRATION_002_COMPLETE.md  OBSERVABILITY_GAP_ANALYSIS_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_SETUP.md  PHASE2_FRONTEND.md  PHASE2_OBSERVABILITY_RECON_RESULTS.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_DEPLOYMENT.md  PHASE_5_SUMMARY.md  PHASE_COMPLETION_STATUS.md  Procfile  README.md  RECOVERY_REPORT.md  RECURSIVE_IMPROVEMENT.md  SKILLS_SYSTEM_SUMMARY.md  VAULT_RECON_MIGRATION_CHECKLIST.md  VAULT_RECON_PATH_MAP.md  VOICE_MODE_CRITICAL_BUG_ANALYSIS.md  VOICE_MODE_RECON_FINDINGS.md  admin_routes.py  analytics_routes.py  analytics_service.py  auth_schema.py  auth_service.py  azure_auth.py  check_embeddings.py  claude_chat.py  claude_run.py  cog_twin.py  config.yaml  (+51 more)
claude_sdk_toolkit/: ADMIN_INTEGRATION_BATTLE_PLAN.md  BUILD_SHEET_ADMIN_INTEGRATION_FIX.md  BUILD_SHEET_AUDIT_LOGGING.md  BUILD_SHEET_OBSERVABILITY_PHASE1.md  BUILD_SHEET_OBSERVABILITY_PHASE2_MEGA.md  BUILD_SHEET_SESSION_RECONNECT.md  BUILD_SHEET_VOICE_TRANSCRIPTION.md  CHANGELOG.md  CLAUDE.md  EMOJI_PURGE_HANDOFF.md  FILE_UPLOAD_WIRING_MAP.md  HANDOFF_FRONTEND_RECON.md  HANDOFF_FULL_RESTRUCTURE.md  HANDOFF_MEMORY_CONSOLIDATION.md  HANDOFF_PROTOCOL_ENFORCEMENT.md  IMPLEMENTATION_SUMMARY.md  MEMORY_ARCHITECTURE_MAP.md  README.md  RECON_ADMIN_INTEGRATION_MAP.md  RECON_FILE_UPLOAD_WIRING.md  RECON_OBSERVABILITY_GAP.md  RECON_OBSERVABILITY_PHASE2.md  RECON_OBSERVABILITY_SUITE.md  RECON_VOICE_FRONTEND.md  RECON_VOICE_RESULTS.md  REORGANIZATION_COMPLETE.md  SDK_AGENT_MISSION.md  SDK_BUILD_OBSERVABILITY.md  SDK_RECON_PUNCHLIST.md  __init__.py  __init___sdk.py  claude_cli.py  claude_run.py  db_tools.py  memory_tools.py  pyproject.toml  railway_tools.py  toolkit_tree.txt  vault_recon.md
claude_sdk_toolkit/archive/: claude_chat.py  claude_run.py  convert_tools.py  migration_tenant_multitenant.py
claude_sdk_toolkit/core/: database.py
claude_sdk_toolkit/docs/: ENHANCED_INGESTION_SPEC.md  RESTRUCTURE_COMPLETE.md  (+3 more)
(+519 files in other folders)
