[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sdk-toolkit"
version = "0.1.0"
description = "Professional SDK toolkit for building Claude-powered applications with MCP server support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Enterprise Bot Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core SDK
    "anthropic>=0.39.0",

    # MCP Implementation
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "msgpack>=1.0.0",

    # Database tools
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "tabulate>=0.9.0",

    # CLI & UX
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",

    # Utilities
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
]

[project.scripts]
claude-chat = "claude_sdk_toolkit.cli.repl:main"
claude-run = "claude_sdk_toolkit.cli.runner:main"
claude-mcp = "claude_sdk_toolkit.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_sdk_toolkit = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=claude_sdk_toolkit --cov-report=term-missing"
